<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pure_pursuit_controller</name>
  <version>1.0.0</version>
  <description>Pure Pursuit Local Planner</description>
  <maintainer email="ryanliao@umich.edu">Ryan Liao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>plugin_base_classes</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>infra_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>